# pokemon-adventure

./: .gitignore  .mcp.json  BATTLE_TODO.md  CLAUDE.md  Cargo.toml  DUAL_BATTLE_MODE_DESIGN.md  FSM_notes.md  MCP_USER_GUIDE.md  api_plan.md  bug_report.md  build.rs  build_setup_todo.md  command_refactor_notes.md  concept_structs.md  implementation_roadmap.md  mcp_plan.md  move_effect_suggestion.md  original_red_pokemon_learnsets.json  original_red_pokemon_stats.json  progress_refactor_plan.md  progression_refactor_plan.md  progression_system_design.md  testing_harness_todo.md  turn_orchestrator_refactoring_plan.md
data/moves/: absorb.ron  acid.ron  acidarmor.ron  agility.ron  amnesia.ron  ancientpower.ron  aurorabeam.ron  barrage.ron  barrier.ron  bide.ron  bind.ron  bite.ron  blazekick.ron  blizzard.ron  bodyslam.ron  boneclub.ron  bonemerang.ron  bubble.ron  bubblebeam.ron  bubblehammer.ron  chargebeam.ron  clamp.ron  cometpunch.ron  confuseray.ron  confusion.ron  constrict.ron  conversion.ron  counter.ron  cut.ron  defensecurl.ron  dig.ron  disable.ron  discharge.ron  dizzypunch.ron  doubleedge.ron  doublekick.ron  doubleslap.ron  doubleteam.ron  dragonrage.ron  dreameater.ron  (+139 more)
data/pokemon/: 001-bulbasaur.ron  002-ivysaur.ron  003-venusaur.ron  004-charmander.ron  005-charmeleon.ron  006-charizard.ron  007-squirtle.ron  008-wartortle.ron  009-blastoise.ron  010-caterpie.ron  011-metapod.ron  012-butterfree.ron  013-weedle.ron  014-kakuna.ron  015-beedrill.ron  016-pidgey.ron  017-pidgeotto.ron  018-pidgeot.ron  019-rattata.ron  020-raticate.ron  021-spearow.ron  022-fearow.ron  023-ekans.ron  024-arbok.ron  025-pikachu.ron  026-raichu.ron  027-sandshrew.ron  028-sandslash.ron  029-nidoran-f.ron  029-nidoran_f.ron  030-nidorina.ron  031-nidoqueen.ron  032-nidoran-m.ron  032-nidoran_m.ron  033-nidorino.ron  034-nidoking.ron  035-clefairy.ron  036-clefable.ron  037-vulpix.ron  038-ninetales.ron  (+115 more)
data/teams/demo/: blastoise.ron  charizard.ron  venusaur.ron
design_plan/: FSM_notes.md  ai_design.md  battle_actions_design.md  battle_commands_design.md  battle_struct_design.md  design_doc.md  move_data_design.md  rng_design.md  special_move_cases.md  special_move_cases_notes.md  status_conditions_design.md
design_plan/structs/: Battle.md  BattleState.md  MoveData.md  Player.md  PokemonInst.md  PokemonSpecies.md
pokemon-adventure-schema/: Cargo.toml
pokemon-adventure-schema/src/: lib.rs  move_types.rs  moves.rs  pokemon_types.rs  species.rs
schema/: Cargo.toml
schema/src/: battle_data.rs  lib.rs  move_data.rs  move_types.rs  moves.rs  pokemon_types.rs  species.rs  species_data.rs
src/: MoveEffects.md  MoveList.md  PokemonList.md  effects.rs  errors.rs  lib.rs  main.rs  mcp_interface.rs  move_data.rs  moves.rs  player.rs  pokemon.rs  prefab_teams.rs  progression.rs  species.rs  teams.rs
src/battle/: action_stack.rs  ai.rs  battle_design_plan.md  calculators.rs  commands.rs  conditions.rs  engine.rs  mod.rs  runner.rs  state.rs  stats.rs  test_action_prevention.rs  test_condition_damage.rs  test_critical_hits.rs  test_damage_effects.rs  test_end_of_turn.rs  test_fainting.rs  test_multi_attacks.rs  test_resolve_turn.rs  test_status_moves.rs  turn_orchestrator.rs
src/battle/catch/: calculation.rs  commands.rs  mod.rs  validation.rs
src/battle/move_effects/: damage_effects.rs  mod.rs  stat_effects.rs  (+2 more)
src/move_data/: damage_effects.rs  format_description.rs  special_effects.rs  stat_effects.rs  status_effects.rs
src/progression/: evolution.rs  mod.rs  moves.rs  participation.rs  rewards.rs
(+36 files in other folders)
