[package]
name = "pokemon-adventure"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pokemon-adventure"
path = "src/main.rs"
test = false

[lib]
name = "pokemon_adventure"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.9.2"
ordered-float = "4.2.0"

[build-dependencies]
phf = { version = "0.11", features = ["macros"] }
phf_codegen = "0.11"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"