[workspace]
members = [
    ".",
    "pokemon-adventure-schema"
]
resolver = "2"

[package]
name = "pokemon-adventure"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size. 's' is another option.
lto = true          # Enable Link-Time Optimization
codegen-units = 1   # Reduce parallel code generation units
panic = 'abort'     # Abort on panic instead of unwinding
strip = true        # Automatically strip symbols from the binary

[[bin]]
name = "pokemon-adventure"
path = "src/main.rs"
test = false

[[bin]]
name = "pokemon-adventure-mcp"
path = "src/bin/mcp_client_server.rs"
test = false

[lib]
name = "pokemon_adventure"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
rand = "0.9.2"
ordered-float = "4.2.0"
tokio = { version = "1.0", features = ["full"] }
rmcp = { version = "0.6.0", features = ["server", "transport-io"] }
pokemon-adventure-schema = { path = "./pokemon-adventure-schema" }

[build-dependencies]
phf = { version = "0.11", features = ["macros"] }
phf_codegen = "0.11"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
pokemon-adventure-schema = { path = "./pokemon-adventure-schema" }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"